--- a/RepositoryPatternDemoDone/Views/Neighbourhoods/Index.cshtml
+++ b/RepositoryPatternDemoDone/Views/Neighbourhoods/Index.cshtml
@@ -26,8 +26,7 @@
                 @Html.DisplayFor(modelItem => item.Neighbourhood1)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.Neighbourhood1">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Neighbourhood1">Delete</a>
+                <a asp-action="Details" asp-route-id="@item.Neighbourhood1">Details</a> 
             </td>
         </tr>
 }
